--- a/sls/package.json
+++ b/sls/package.json
@@ -2,6 +2,7 @@
   "name": "sls",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rcltech.github.io/sls",
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "axios": "^0.19.0",
@@ -15,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
