--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SLS",
+  "name": "RC Lee Hall Smart Laundry System",
   "icons": [
     {
       "src": "logo.png",
