--- a/sls/package.json
+++ b/sls/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
+    "reactstrap": "^8.0.1",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
