--- a/ec2/package.json
+++ b/ec2/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "connect": "ssh -i .keys/sls-ec2-server.pem ec2-user@ec2-52-15-92-86.us-east-2.compute.amazonaws.com",
+    "pm2": "pm2 start index.js"
     "test": "echo \"No tests specified\" && exit 1"
   },
   "author": "",
