--- a/ec2/package.json
+++ b/ec2/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon index.js",
     "connect": "ssh -i .keys/sls-ec2-server.pem ec2-user@ec2-52-15-92-86.us-east-2.compute.amazonaws.com",
     "upload": "scp -i ./.keys/sls-ec2-server.pem -r ./ ec2-user@ec2-52-15-92-86.us-east-2.compute.amazonaws.com:~/ec2",
-    "pm2": "pm2 start index.js",
+    "pm2-start": "pm2 start index.js",
+    "pm2-stop": "pm2 stop index.js",
     "test": "echo \"No tests specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.3.2"
+    "mongodb": "^3.3.2",
+    "pm2": "^3.5.1"
   }
 }
