--- a/lambda/package.json
+++ b/lambda/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "dotenv": "^8.1.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
