--- a/sls/package.json
+++ b/sls/package.json
@@ -2,7 +2,7 @@
   "name": "sls",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rcltech.github.io/sls",
+  "homepage": "https://sls.rctech.club",
   "dependencies": {
     "@material-ui/core": "^4.3.3",
     "axios": "^0.19.0",
