--- a/ec2/package.json
+++ b/ec2/package.json
@@ -14,11 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "await-to-js": "^2.1.1",
     "body-parser": "^1.19.0",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.3.2",
+    "lodash.clonedeep": "^4.5.0",
+    "mongodb": "^3.3.3",
     "pm2": "^3.5.1"
   }
 }
