--- a/sls/package.json
+++ b/sls/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "homepage": "https://sls.rctech.club",
   "dependencies": {
-    "@material-ui/core": "^4.3.3",
+    "@apollo/react-hooks": "^3.1.5",
+    "@material-ui/core": "^4.9.10",
+    "apollo-boost": "^0.4.7",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "graphql": "^15.0.0",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0",
+    "react-loader-spinner": "^3.1.14",
+    "react-scripts": "^3.4.1",
     "reactstrap": "^8.0.1",
     "typeface-roboto": "0.0.75"
   },
