--- a/lambda/package.json
+++ b/lambda/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf lambda.zip && zip -r -X lambda.zip ./",
-    "start:testServer": "node server.js",
-    "dev:testServer": "nodemon server.js"
+    "build": "npm install && rm -rf lambda.zip && zip -r -X lambda.zip ./",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
