--- a/lambda/package.json
+++ b/lambda/package.json
@@ -4,13 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install && rm -rf lambda.zip && zip -r -X lambda.zip ./",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
     "dotenv": "^8.1.0",
+    "graphql": "^15.0.0",
+    "graphql-request": "^1.8.2",
+    "graphql-tag": "^2.10.3",
     "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.3"
   }
 }
