--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -18,7 +18,9 @@ jobs:
         run: |
           npm install
           npm run build
+
       - name: Deploy
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        run: npm run deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
