--- a/lambda/package.json
+++ b/lambda/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install && rm -rf lambda.zip && zip -r -X lambda.zip ./",
+    "build": "rm -rf lambda.zip && zip -r -X lambda.zip ./",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -19,7 +19,6 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.3"
   }
